[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/Map_Parts/MP-46-Balloon_Fish.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Map_Parts/MP-46-Balloon_Fish.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=2]
radius = 74.027

[sub_resource type="CapsuleShape2D" id=1]
radius = 61.0
height = 6.0

[node name="MP-46-Balloon-Fish" type="Node2D"]
script = ExtResource( 2 )

[node name="MP-46-Balloon_Fish" type="Sprite" parent="."]
position = Vector2( 0, 69 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Mouth_Area2D" type="Area2D" parent="MP-46-Balloon_Fish"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="MP-46-Balloon_Fish/Mouth_Area2D"]
position = Vector2( -34, -46 )
shape = SubResource( 2 )

[node name="Top_Position2D" type="Position2D" parent="."]
position = Vector2( 1, -55 )

[node name="Bot_Position2D" type="Position2D" parent="."]
position = Vector2( 1, 69 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -63, -72 )
shape = SubResource( 1 )

[connection signal="body_entered" from="MP-46-Balloon_Fish/Mouth_Area2D" to="." method="_on_Mouth_Area2D_body_entered"]
[connection signal="body_exited" from="MP-46-Balloon_Fish/Mouth_Area2D" to="." method="_on_Mouth_Area2D_body_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
